// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots for each screen snapshot for FeedScreen 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "justifyContent": "center",
        "paddingTop": 60,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 24,
        },
      ]
    }
  >
    Feed Screen
  </Text>
</View>
`;

exports[`snapshots for each screen snapshot for HomeScreen 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "justifyContent": "center",
        "paddingTop": 60,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 24,
        },
      ]
    }
    testID="home-screen-title"
  >
    Home Screen
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      }
    }
    testID="go-to-profile-button"
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      See Profile
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "marginTop": 12,
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      Sign out
    </Text>
  </View>
</View>
`;

exports[`snapshots for each screen snapshot for LoadingScreen 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "justifyContent": "center",
        "paddingTop": 60,
        "width": "100%",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="lightblue"
    hidesWhenStopped={true}
    size="large"
  />
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 36,
        },
      ]
    }
  >
    Loading...
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      Go to login screen
    </Text>
  </View>
</View>
`;

exports[`snapshots for each screen snapshot for LoginScreen 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "justifyContent": "center",
        "paddingTop": 60,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 24,
        },
      ]
    }
  >
    Login Screen
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      Sign In
    </Text>
  </View>
</View>
`;

exports[`snapshots for each screen snapshot for ProfileScreen 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "height": "100%",
        "justifyContent": "center",
        "paddingTop": 60,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 24,
        },
      ]
    }
  >
    Profile Screen
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 18,
        },
      ]
    }
    testID="profile-screen-description"
  >
    Welcome to the Profile Screen
  </Text>
</View>
`;
